# prefhub

./: CLAUDE.md  README.md  pyproject.toml
examples/: audio_assistant_integration.py  idea_generator_integration.py
prefhub/: __init__.py
prefhub/api/: __init__.py
prefhub/models/: mixins.py
prefhub/schemas/: __init__.py  preferences.py
prefhub/services/: preferences.py
tests/: test_preferences.py
